crates/nash-report/src/type_/snapshots/nash_report__type___tests__hint_missing_fields.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "Doc::stack(problem_to_hint(&problem)).render(80, false)"
---
Add the missing fields: `name`, `age`.
