crates/nash-report/src/type_/snapshots/nash_report__type___tests__hint_option.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "Doc::stack(problem_to_hint(&problem)).render(80, false)"
---
Use `case` to handle both option variants.
