crates/nash-report/src/type_/snapshots/nash_report__type___tests__impl_resolution_limit.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\ntrait Eq 'a where\n    eq : 'a -> 'a -> Primitive.bool\nimpl Eq (Primitive.list 'a) => Eq 'a where\n    eq xs ys = True\nf xs = eq xs xs\n"
---
nash::type::impl_resolution_limit

  × Impl resolution for `Eq` in `f` exceeded the work limit.
   ╭─[Main.nash:6:8]
 5 │     eq xs ys = True
 6 │ f xs = eq xs xs
   ·        ────────
   ╰────
  help: This requirement remains unchecked; other reported errors still apply.

        Simplify cyclic or growing impl constraints.
