crates/nash-report/src/type_/snapshots/nash_report__type___tests__infinite_kind.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : 'a 'a\nf = f\n"
---
nash::type::bad_kind

  × `f` requires a self-referential kind.
   ╭─[Main.nash:2:5]
 1 │ module Main exposing (..)
 2 │ f : 'a 'a
   ·     ─────
 3 │ f = f
   ╰────
  help: Type arguments: 'a

        Break the cycle in this type application.
