crates/nash-report/src/type_/snapshots/nash_report__type___tests__infinite_type.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf x = x x\n"
---
nash::type::infinite_type

  × `f` has a self-referential type: ∞ -> 'a
   ╭─[Main.nash:2:7]
 1 │ module Main exposing (..)
 2 │ f x = x x
   ·       ───
   ╰────
  help: Break the type cycle; ∞ marks a repeated part of the type.
