crates/nash-report/src/type_/snapshots/nash_report__type___tests__kind_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : 'f Primitive.int -> 'f\nf x = x\n"
---
nash::type::bad_kind

  × Kind mismatch in `f`: expected `Type -> Type`, found `Type`.
   ╭─[Main.nash:2:5]
 1 │ module Main exposing (..)
 2 │ f : 'f Primitive.int -> 'f
   ·     ────────────────
 3 │ f x = x
   ╰────
  help: Type arguments: Primitive.int

        Check type-constructor arguments and the annotation's quantified kinds.
