crates/nash-report/src/type_/snapshots/nash_report__type___tests__mismatch_annotation_body.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue : Primitive.int\nvalue = \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:3:9]
 1 │ module Main exposing (..)
 2 │ value : Primitive.int
   ·         ──────┬──────
   ·               ╰── declared type
 3 │ value = "hello"
   ·         ───┬───
   ·            ╰── body of `value`
   ╰────
