crates/nash-report/src/type_/snapshots/nash_report__type___tests__mismatch_call_arg_first.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : Primitive.int -> Primitive.int\nf x = x\nvalue = f \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:4:11]
 3 │ f x = x
 4 │ value = f "hello"
   ·           ───┬───
   ·              ╰── argument 1 of `f`
   ╰────
