crates/nash-report/src/type_/snapshots/nash_report__type___tests__mismatch_call_arg_second_has_hint.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : Primitive.int -> Primitive.int -> Primitive.int\nf x y = x\nvalue = f 1 \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:4:13]
 3 │ f x y = x
 4 │ value = f 1 "hello"
   ·             ───┬───
   ·                ╰── argument 2 of `f`
   ╰────
